# practice

./: .gitignore  LICENSE  README.md
docker/: README.md
python/: .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml
python/01_language_features/: assign.py  coding_style.py  strings_start.py  template_str.py
python/02_advanced_functions/: doc_string.py  keyargs.py  lambda_func.py  var_arg_list.py
python/03_comprehensions/: dict.py  list.py  set.py
python/04_class_objects/: comparison.py  compattrs.py  enumerations.py  numeric.py  objstrs.py
python/05_structural_pattern_matching/: capture.py  class.py  guards.py  sequences.py  simple.py
python/data_structures/07_trees/01_01_basic_tree/: tree.py
python/data_structures/07_trees/01_02_b_searching_a_tree/: tree.py
python/decorators/: 01.py  010_cache.py  02.py  03.py  04.py  05_args.py  06_args_kwargs2.py  07_timer.py  08_munch.py  09_count.py  flask_fib.py
python/design_patterns/behavioral/: observer.py
python/design_patterns/creational/: factory.py  prototype.py
python/functional_programming/: 02_01_functions_as_data.py  02_02_functions_as_data.py  02_03_passing_functions_as_arguments.py  02_04_returning_functions.py  02_05_closure.py  02_06_high_order_function.py  03_02_mapping.py  03_03_filtering.py  03_04_lambda.py  03_05_list_comprehension.py  03_06_reduce.py  03_07_combining_list_functions.py  04_02_partial_application_and_currying.py  04_03_recursion.py  README.md
python/typing/: basic_class.py  basic_duck.py  basic_functions.py  basic_types.py
(+18 files in other folders)
