[project]
name = "practice-pyton"
version = "0.1.0"
description = "practicing some old basic stuff"
authors = [{ name = "DoreyKiss", email = "dorey.kiss@gmail.com" }]
readme = "README.md"
requires-python = "~3.12.10"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "packages" }]

[tool.poetry.dependencies]
python = "~3.12.10"
pytest = "~7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
hello = "packages.hello:main"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 88
